feat: :sparkles: using global variables in `data/` for pages

--- a/index.pug
+++ b/index.pug
@@ -1,12 +1,12 @@
 ---
-title: 'Hello World'
+title: site.title
 ---
 
 html
   head
-    title= title
+    title= site.title
   body
-    h1= title
-    p this is some smol blog i am working.
+    h1= site.title
+    p= site.description
     div
-      p 한글도 입력 되나?
+      p 으에에에
