--- a/index.pug
+++ b/index.pug
@@ -5,8 +5,9 @@ title: site.title
 html
   head
     title= site.title
+    link(rel='stylesheet', href='styles.css', type='text/css')
   body
     h1= site.title
     p= site.description
     div
-      p 으에에에
+      p 으에에에에에에
