--- a/_includes/layouts/main.pug
+++ b/_includes/layouts/main.pug
@@ -1,13 +1,9 @@
-DOCTYPE html
+head
+  title= title
+  meta(charset = "utf-8")
+  link(rel='stylesheet', href='styles.css', type='text/css')
+  //- meta(name = "viewport", content = "width=device-width, initial-scale=1")
+  //- meta(name = "description", content = description)
 
-html
-  head
-    meta(charset = "utf-8")
-    title= title
-
-  body
-    main
-      p start
-      {{ content }}
-      p end
-    main= content
+body
+  block content
