--- a/index.pug
+++ b/index.pug
@@ -1,13 +1,7 @@
----
-title: site.title
----
+extends /layouts/main.pug
 
-html
-  head
-    title= site.title
-    link(rel='stylesheet', href='styles.css', type='text/css')
-  body
-    h1= site.title
-    p= site.description
-    div
-      p 으에에에에에에
+block content
+  h1= site.title
+  p= site.description
+  div
+    p 으에에에에에에 / this is english
