--- a/index.pug
+++ b/index.pug
@@ -1,7 +1,9 @@
-extends /layouts/main.pug
+---
+type: home
+---
+
+extends /layouts/home.pug
 
 block content
-  h1= site.title
-  p= site.description
   div
     p 으에에에에에에 / this is english
