--- a/_includes/layouts/main.pug
+++ b/_includes/layouts/main.pug
@@ -1,9 +1,10 @@
 head
   title= title
   meta(charset = "utf-8")
-  link(rel='stylesheet', href='styles.css', type='text/css')
-  //- meta(name = "viewport", content = "width=device-width, initial-scale=1")
-  //- meta(name = "description", content = description)
+  meta(name = "viewport", content = "width=device-width, initial-scale=1")
+  link(rel='stylesheet', href='/styles.css', type='text/css')
 
 body
+  include /layouts/header.pug
   block content
+  block footer
