--- a/_includes/css/text.css
+++ b/_includes/css/text.css
@@ -1,23 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@400&family=Ubuntu+Mono&display=swap");
 
+/* font sizes, color, style */
+
 body {
   font-family: "Ubuntu Mono", "IBM Plex Sans KR", monospace;
   color: var(--color-fg);
   background-color: var(--color-bg);
+  font-size: 1em;
 }
 
 h1 {
   font-size: 2em;
 }
 
-p {
-  font-size: 1em;
-}
-
-hr {
-  border: none;
-  border-top: 4px dashed var(--color-fg);
-}
 
 a:link,
 a:visited,
@@ -25,8 +20,5 @@ a:hover,
 a:active {
     color: white;
     text-decoration: none;
-}
-
-.header {
-  line-height: 0%;
+    text-decoration: underline;
 }
