--- a/_includes/layouts/main.pug
+++ b/_includes/layouts/main.pug
@@ -4,7 +4,7 @@ head
   title= title
   meta(charset = "utf-8")
   meta(name = "viewport", content = "width=device-width, initial-scale=1")
-  link(rel='stylesheet', href='/styles.css', type='text/css')
+  link(rel='stylesheet', href='/main.css', type='text/css')
 
 body
   include /layouts/header.pug
