--- a/_includes/css/layout.css
+++ b/_includes/css/layout.css
@@ -5,8 +5,8 @@ hr {
   border-top: 4px dashed var(--color-fg);
 }
 
-header > ul,
-header > ul > li {
+nav > ul,
+nav > ul > li {
   margin: 0;
   padding-left: 0;
   padding-right: 0.5em;
