--- a/_includes/css/text.css
+++ b/_includes/css/text.css
@@ -1,29 +1,46 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@400&family=Ubuntu+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@200;300&family=Ubuntu+Mono:wght@400&display=swap");
 
 /* font sizes, color, style */
 
 :root {
   --color-fg: #80f09a;
   --color-bg: #282c34;
+  --color-text: #ffffff;
+  --size-text: 1em;
+  --size-title: calc(var(--size-text) * 1.5);
 }
 
 body {
   font-family: "Ubuntu Mono", "IBM Plex Sans KR", monospace;
-  color: var(--color-fg);
+  color: var(--color-text);
   background-color: var(--color-bg);
-  font-size: 1em;
+  font-size: var(--size-text);
 }
 
 h1 {
-  font-size: 2em;
+  font-size: var(--size-title);
 }
 
+h1,
+h2,
+h3,
+h4 {
+  color: var(--color-fg);
+}
+
+#title {
+  text-decoration-color: var(--color-fg);
+}
 
 a:link,
 a:visited,
-a:hover,
 a:active {
-    color: white;
-    text-decoration: none;
-    text-decoration: underline;
+  color: var(--color-text);
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+a:hover {
+  color: var(--color-bg);
+  background-color: var(--color-fg);
 }
