--- a/_includes/layouts/header.pug
+++ b/_includes/layouts/header.pug
@@ -1,20 +1,11 @@
-block blog_title
-  a(href='/')
-    h1= site.title
-
-block content_title
-  h2= title
-  hr
-
 mixin navbar(...args)
   ul
-    each name in args
+    for name in args
       li: a(href= '/' + name.toLowerCase())
         = name
 
 header
-  block blog_title
+  a(id= "title", href='/'): h1= site.title
   nav: +navbar('About', 'Posts')
-  block content_title
-  //- - if (type === 'home')
-  //-   p.header= site.description
+  h2= title
+  hr
