--- a/_includes/css/tags.css
+++ b/_includes/css/tags.css
@@ -1,6 +1,12 @@
 .tag {
+  display: inline-block;
+  text-transform: uppercase;
+  line-height: 1;
+  padding: 0.2em 0.5em;
+  margin-right: 0.8em;
   color: var(--color-text);
   background-color: var(--color-fg);
+  text-decoration: none;
 }
 
 .inline {
