--- a/_includes/css/layout.css
+++ b/_includes/css/layout.css
@@ -18,3 +18,17 @@ ul,
 li {
   all: none;
 }
+
+/* @media (min-width: 1000px) { */
+/* } */
+section {
+
+  display: flex;
+  justify-content: center;
+  /* margin-left: 4vw;
+  margin-right: 4vw; */
+}
+
+content {
+  max-width: 1000px;
+}
