chore: :truck: move things

--- a/_includes/css/layout.css
+++ b/_includes/css/layout.css
@@ -20,15 +20,16 @@ li {
 }
 
 /* @media (min-width: 1000px) { */
-/* } */
-section {
+/* }
+section > content {
 
   display: flex;
   justify-content: center;
   /* margin-left: 4vw;
-  margin-right: 4vw; */
+  margin-right: 4vw;
 }
 
 content {
   max-width: 1000px;
 }
+*/
