--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+@import "https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@200;300&family=Ubuntu+Mono:wght@400&display=swap";
+@import "https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.0.0/build/styles/github-dark.min.css";
+
 @import "css/post.css";
 @import "css/text.css";
 @import "css/layout.css";
