--- a/_includes/css/tags.css
+++ b/_includes/css/tags.css
@@ -9,9 +9,9 @@
   text-decoration: none;
 }
 
-.inline {
+/* .inline {
   margin: 0;
   padding-left: 0;
   padding-right: 0.5em;
   display: inline;
-}
+} */
