style: :lipstick: ligatures for code block

--- a/_includes/css/text.css
+++ b/_includes/css/text.css
@@ -27,12 +27,11 @@ h4 {
 }
 
 code {
-  font-family: var(--font-family);
+  font-family: "Fira Code", var(--font-family);
   color: var(--color-fg);
 }
 
 #title {
-  /* font-size: var(--size-title); */
   text-decoration-color: var(--color-fg);
 }
 
