--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
-@import "https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.0.0/build/styles/github-dark.min.css";
-@import "https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@200;300&family=Ubuntu+Mono:wght@400&display=swap";
+@import url("https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.0.0/build/styles/github-dark.min.css");
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400&family=IBM+Plex+Sans+KR:wght@200;300;400&family=Ubuntu+Mono:wght@400;700&display=swap');
 
 @import "css/post.css";
 @import "css/text.css";
