fix: :ambulance: fix incorret root url

--- a/_includes/css/text.css
+++ b/_includes/css/text.css
@@ -12,7 +12,7 @@
   --size-h4: var(--size-text);
 }
 
-body {
+body, p {
   font-family: var(--font-family);
   color: var(--color-text);
   background-color: var(--color-bg);
@@ -45,5 +45,6 @@ a:active {
 
 a:hover {
   color: var(--color-bg);
+  text-decoration: none;
   background-color: var(--color-fg);
 }
