--- a/_includes/css/layout.css
+++ b/_includes/css/layout.css
@@ -2,7 +2,9 @@
 
 hr {
   border: none;
-  border-top: 4px dashed var(--color-fg);
+  height: 0.12em;
+  border-top: 0.12em solid var(--color-fg);
+  border-bottom: 0.2em solid var(--color-fg);
 }
 
 nav > ul,
