--- a/_includes/layouts/main.pug
+++ b/_includes/layouts/main.pug
@@ -4,13 +4,7 @@ head
   title= title
   meta(charset = "utf-8")
   meta(name = "viewport", content = "width=device-width, initial-scale=1")
-  link(
-    rel='stylesheet',
-    href='/main.css',
-    media='print',
-    onload="this.media='all'"
-  )
-    //- type='text/css'
+  link(rel='stylesheet', href='/main.css', type='text/css')
 
 body
   header
