feat: :sparkles: xml and url

--- a/pages/about.pug
+++ b/pages/about.pug
@@ -13,3 +13,10 @@ mixin links(dict)
 
 block content
   +links(site.contact)
+
+  //- p= date
+  //- //- - let d = date
+  //- :date
+  //-   Thu Dec 30 2021 09:00:00 GMT+0900 (Korean Standard Time)
+
+  //- p end
