perf: :zap: load font at last

--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@import "css/fonts.css";
+/* @import "css/fonts.css"; */
 @import "css/post.css";
 @import "css/text.css";
 @import "css/layout.css";
