--- a/_includes/layouts/main.pug
+++ b/_includes/layouts/main.pug
@@ -1,7 +1,7 @@
 doctype html
 
 head
-  title= title
+  title= title || site.title
   meta(charset = "utf-8")
   meta(name = "viewport", content = "width=device-width, initial-scale=1")
   link(rel='stylesheet', href='/main.css', type='text/css')
