style: :ambulance: fix h variable mismatch

--- a/_includes/css/text.css
+++ b/_includes/css/text.css
@@ -12,7 +12,8 @@
   --size-h4: var(--size-text);
 }
 
-body, p {
+body,
+p {
   font-family: var(--font-family);
   color: var(--color-text);
   background-color: var(--color-bg);
