--- a/_includes/layouts/main.pug
+++ b/_includes/layouts/main.pug
@@ -10,6 +10,8 @@ body
   header
     include /templates/header.pug
   section
+    include /templates/fdate.pug
+    //- hacky date formatting
     block content
   footer
     block footer
