--- a/index.pug
+++ b/index.pug
@@ -10,5 +10,9 @@ block content
   p= site.description
 
   ul
-    for post in search.pages("", "date=desc")
+    for post in search.pages("type=post", "date=desc")
       +preview(post)
+      //- - var raw_date = `${post.data.date}`
+      //- include /templates/fdate_input.pug
+      //- p #{post.data.title} #{fdate}
+
