--- a/_includes/css/text.css
+++ b/_includes/css/text.css
@@ -6,18 +6,21 @@
   --color-text: #ffffff;
   --size-text: 1em;
   --font-family: "Ubuntu Mono", "IBM Plex Sans KR", monospace;
-  --size-h1: calc(var(--size-text) * 1.5);
-  --size-h2: calc(var(--size-text) * 1.25);
-  --size-h3: calc(var(--size-text) * 1.1);
+  --size-h1: calc(var(--size-text) * 2);
+  --size-h2: calc(var(--size-text) * 1.5);
+  --size-h3: calc(var(--size-text) * 1.25);
   --size-h4: var(--size-text);
 }
 
 body,
-p {
+p, a {
   font-family: var(--font-family);
   color: var(--color-text);
   background-color: var(--color-bg);
   font-size: var(--size-text);
+  height: var(--size-text);
+  margin-block-end: var(--size-text);
+  margin-block-start: var(--size-text);
 }
 
 h1,
