--- a/_includes/layouts/post.pug
+++ b/_includes/layouts/post.pug
@@ -2,13 +2,13 @@ extends /layouts/main.pug
 
 block content
   include /templates/fdate.pug
+  include /templates/tags.pug
   content
     article
       h1: a(href=`${url}`)= title
       nav(style="display:flex; height: 100%")
         p= fdate_long
-        for tag in tags
-          a.tag(href=`${url}tag/${tag}`) #{tag}
+        +list_tags(tags)
       br
       !=content
     hr
