--- a/_includes/css/layout.css
+++ b/_includes/css/layout.css
@@ -22,14 +22,14 @@ li {
 }
 
 @media (min-width: 1000px) {
-  content {
+  section {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
   }
 
   article {
     width: 60%;
-    width: 800px;
   }
 }
 
