chore: :lipstick: my eyes

--- a/_includes/layouts/main.pug
+++ b/_includes/layouts/main.pug
@@ -10,7 +10,7 @@ body
   header
     include /templates/header.pug
   section
-    block content
+    block contents
   footer
     block footer
   link(rel='stylesheet', href='/fonts.css', type='text/css')
