--- a/pages/404.pug
+++ b/pages/404.pug
@@ -4,7 +4,7 @@ url: /404.html
 
 extends /layouts/main.pug
 
-block content
+block contents
   a#title(href="/")
     h1 404 not found
     p return to home page
