--- a/_includes/css/layout.css
+++ b/_includes/css/layout.css
@@ -22,7 +22,7 @@ li {
 }
 
 @media (min-width: 1000px) {
-  section {
+  content {
     display: flex;
     flex-direction: column;
     align-items: center;
