--- a/_includes/templates/header.pug
+++ b/_includes/templates/header.pug
@@ -2,5 +2,5 @@ include /templates/navbar.pug
 
 a#title(href='/')
   h1= site.title
-nav: +navbar('About', 'Posts')
+nav: +navbar('About', 'Posts', 'Tags')
 hr
