--- a/_includes/templates/tags.pug
+++ b/_includes/templates/tags.pug
@@ -1,4 +1,6 @@
 mixin list_tags(taglst)
   for tag in taglst
     unless tag === "null"
-      a.tag(href=`${url}tag/${tag}`) #{tag}
+      a.tag(href=`/tags/${tag}`) #{tag}
+
+  //- search.pages()
